--- a/views/productos.html
+++ b/views/productos.html
@@ -131,14 +131,14 @@
                         alt="la vida invisible de addie larue">
                     <h2>La vida invisible de Addie Larue</h2>
                     <p>$1.800</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="asedioytormenta">
                     <h2>Asedio y Tormenta</h2>
                     <p>$2.700</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -162,21 +162,21 @@
                     <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="el rey malvado">
                     <h2>El Rey Malvado</h2>
                     <p>$2.500</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="El ultimo mago">
                     <h2>El Ultimo Mago</h2>
                     <p>$1.999</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/matar-un-reino.jpg" alt="matar un reino">
                     <h2>Matar un Reino</h2>
                     <p>$1.990</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -200,14 +200,14 @@
                     <img src="../assets/media/libros/fantasia/supernova.jpg" alt="supernova">
                     <h2>Supernova</h2>
                     <p>$1.399</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="como el rey elfhame aprendio a odiar las historias">
                     <h2>Como el Rey Elfhame aprendio a..</h2>
                     <p>$2.789</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -224,14 +224,14 @@
                     <img src="../assets/media/libros/fantasia/maze-runner.png" alt="Maze runner 1">
                     <h2>Maze Runner, Correr o morir</h2>
                     <p>$1.399</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/maze-3.png" alt="maze runner 3">
                     <h2>Maze Runner, la cura mortal</h2>
                     <p>$1.399</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -262,14 +262,14 @@
                     <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="por trece razones">
                     <h2>Por trece razones</h2>
                     <p>$1.179</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="Obsesión Perversa">
                     <h2>Obsesión Perversa</h2>
                     <p>$1.890</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -277,7 +277,7 @@
                         alt="La Elite">
                     <h2>La Elite</h2>
                     <p>$1.559</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
@@ -286,7 +286,7 @@
                     <img src="../assets/media/libros/ficcion/after.jpg" alt="After">
                     <h2>After</h2>
                     <p>$1.740</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -308,7 +308,7 @@
                         alt="Dimelo con besos">
                     <h2>Dimelo con besos</h2>
                     <p>$2.190</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
@@ -317,21 +317,21 @@
                     <img src="../assets/media/libros/romantico/dejate-atrapar.jpg" alt="Dejate atrapar">
                     <h2>Dejate atrapar</h2>
                     <p>$900</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/romantico/alaska.jpg" alt="El día que dejó de nevar en Alaska">
                     <h2>El día que dejó de nevar en Alaska</h2>
                     <p>$2.090</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/romantico/perfectos-mentirosos-1399.jpg" alt="Perfectos Mentirosos">
                     <h2>Perfectos Mentirosos</h2>
                     <p>$1.390</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -339,7 +339,7 @@
                         alt="Fingiendo amor">
                     <h2>Fingiendo amor</h2>
                     <p>$2.199</p>
-                    <a href="./views/terror.html" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
         </div>
