--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -133,28 +133,28 @@
                     <img src="../assets/media/libros/fantasia/matar-un-reino.jpg" alt="matar un reino">
                     <h2>Matar un Reino</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="rey malvado">
                     <h2>El Rey malvado</h2>
                     <p>$2.500</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="ultimo mago">
                     <h2>El Ultimo Mago</h2>
                     <p>$1.999</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="asedioytormenta">
                     <h2>Asedio y Tormenta</h2>
                     <p>$2.700</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
@@ -163,28 +163,28 @@
                     <img src="../assets/media/libros/fantasia/supernova.jpg" alt="supernova">
                     <h2>Supernova</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="como el rey de Elfhame aprendio">
                     <h2>Como el Rey Elfhame aprendio a ..</h2>
                     <p>$2.789</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/maze-runner.png" alt="maze runner">
                     <h2>Maze Runner, Correr o morir</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/maze-3.png" alt="maze runner 3">
                     <h2>Maze Runner, la cura mortal</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
         </div>
