--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -145,14 +145,14 @@
                     <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="por trece razones">
                     <h2>Por trece razones</h2>
                     <p>$1.179</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/la-vida-invisible-de.jpg" alt="La vida invisible de Addie larue">
                     <h2>La vida invisble de Addie Larue</h2>
                     <p>$2.700</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
@@ -161,7 +161,7 @@
                     <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="obsesion perversa">
                     <h2>Obsesion Perversa</h2>
                     <p>$1.890</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -175,14 +175,14 @@
                     <img src="../assets/media/libros/ficcion/la-elite.jpg" alt="La Elite">
                     <h2>La Elite</h2>
                     <p>$1.559</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/after.jpg" alt="maze runner">
                     <h2>After</h2>
                     <p>$1.740</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
         </div>
