--- a/views/romantico.html
+++ b/views/romantico.html
@@ -131,28 +131,28 @@
                         <img src="../assets/media/libros/romantico/dimeloconbesos-1799.jpg" alt="dimelo con besos">
                         <h2>Dimelo con besos</h2>
                         <p>$1.799</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/romantico/dejate-atrapar.jpg" alt="dejate atrapar">
                         <h2>Dejate atrapar</h2>
                         <p>$900</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/romantico/alaska.jpg" alt="El dia que dejo de nevar en Alaska">
                         <h2>El día que dejó de nevar en Alaska</h2>
                         <p>$2.090</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/romantico/perfectos-mentirosos-1399.jpg" alt="perfectos Mentirosos">
                         <h2>Perfectos Mentirosos</h2>
                         <p>$1.399</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                 </div>
                 <!-- row -->
@@ -161,28 +161,28 @@
                         <img src="../assets/media/libros/romantico/fingiendo-amor.jpg" alt="fingiendo amor">
                         <h2>Fingiendo amor</h2>
                         <p>$2.199</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/ficcion/la-elite.jpg" alt="La Elite">
                         <h2>La Elite</h2>
                         <p>$1.559</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="a dos metros de ti">
                         <h2>A dos metros de ti</h2>
                         <p>$1.599</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/ficcion/after.jpg" alt="maze runner">
                         <h2>After</h2>
                         <p>$1.740</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./terror.html" class="btn">Comprar</a>
                     </div>
                 </div>
             </div>
