linkee paginas de libros

--- a/views/hidra.html
+++ b/views/hidra.html
@@ -101,28 +101,28 @@
                     <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="Como el Rey Elfhame aprendio a odiar las historias">
                     <h2>Como el Rey Elfhame aprendio a...</h2>
                     <p>$2.789</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey malvado">
                     <h2>El Rey malvado</h2>
                     <p>$2.500</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="Asedio y tormenta">
                     <h2>Asedio y tormenta</h2>
                     <p>$2.700</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las Lunas de sartre">
                     <h2>Las Lunas de Sartre</h2>
                     <p>$1.900</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./sartre.html" class="btn">Comprar</a>
                 </div>
             </div>
 
