--- a/views/vyr.html
+++ b/views/vyr.html
@@ -101,28 +101,28 @@
                     <img src="../assets/media/libros/fantasia/supernova.jpg" alt="Supernova">
                     <h2>Supernova</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/serás.png" alt="Seras">
                     <h2>Seras</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./seras.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
                     <h2>Bajo las estrellas</h2>
                     <p>$1.300</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./bajolasestrellas.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/maze-runner.png" alt="Maze runner 1">
                     <h2>Maze Runner, correr o morir</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
 
@@ -132,28 +132,28 @@
                     <img src="../assets/media/libros/fantasia/maze-2.jpg" alt="Maze Runner, prueba de fuego">
                     <h2>Maze Runner, prueba de fuego</h2>
                     <p>$1.740</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/maze-3.png" alt="Maze Runner, la cura mortal">
                     <h2>Maze Runner, la cura mortal</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="El ultimo mago">
                     <h2>El ultimo mago</h2>
                     <p>$1.999</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/trece-razones.jpg" alt="Por trece razones">
                     <h2>Por trece razones</h2>
                     <p>$1.179</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
 
