--- a/views/naranja.html
+++ b/views/naranja.html
@@ -101,14 +101,14 @@
                     <img src="../assets/media/libros/ficcion/boulevard.jpg" alt="Boulevard">
                     <h2>Boulevard</h2>
                     <p>$1.799</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./boulevard.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <img src="../assets/media/libros/romantico/fingiendo-amor.jpg" alt="Fingiendo amor">
                     <h2>Fingiendo amor</h2>
                     <p>$2.199</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 
         </div>
