--- a/views/puck.html
+++ b/views/puck.html
@@ -101,28 +101,28 @@
                     <img src="../assets/media/libros/fantasia/lore.png" alt="Lore">
                     <h2>Lore</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Lo poco que sabemos">
                     <h2>Lo poco que sabemos</h2>
                     <p>$2.190</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./lopocoquesabemos.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
                     <h2>Riverdale</h2>
                     <p>$1.500</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./riverdale.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sabrina">
                     <h2>Sabrina, el camino de la Bruja</h2>
                     <p>$1.500</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./sabrina.html" class="btn">Comprar</a>
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                     <img src="../assets/media/libros/ficcion/obsesion-perversa.png" alt="Una obsesion-perversa">
                     <h2>Una Obsesión perversa</h2>
                     <p>$1.890</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 
 
