--- a/views/editorial.html
+++ b/views/editorial.html
@@ -51,7 +51,7 @@
                                     </form>
                                 </div>
                             </nav>
-                            <a href="#"><i class="carrito fab fa-shopify"></i></a>
+                            <a href="./carrito.html"><i class="carrito fab fa-shopify"></i></a>
                         </div>
                     </nav>
                 </div>
