--- a/views/carrito.html
+++ b/views/carrito.html
@@ -17,47 +17,7 @@
 </head>
 <body>
     <header>
-        <div class="container container-principal">
-            <div class="index container">
-                <nav class="navbar navbar-expand-lg navbar-light ">
-                    <div class="container atenas">
-                        <a class="logo navbar-brand" href="../index.html">Atenas</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link aria-current="page" href="../index.html">Inicio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="libros nav-link" href="./views/productos.html">Libros</a>
 
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./editorial.html">Editorial</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <nav class="navbar navbar-light ">
-                            <div class="container-fluid">
-                                <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Search"
-                                        aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">Search</button>
-                                </form>
-                            </div>
-                        </nav>
-                        <a href="#"><i class="carrito fab fa-shopify"></i></a>
-                    </div>
-                </nav>
-            </div>
-        </div>
 
         <div class="container-fluid content-bread">
             <nav class="bread-libros">
@@ -65,11 +25,60 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
                                 class="fas fa-long-arrow-alt-left"></i> Home</a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red" href="#"> Carro</p>
-                    </li>
                 </ul>
             </nav>
         </div>
     </header>
+    <main>
+        <div class="container carrito-content">
+            <span class="line-hover active">Shopping Cart
+                <span class="count cart-counter">2</span>
+            </span>
+        </div>
+        <!-- productos en carrito -->
+        <div class="container producto-carro">
+
+            <!-- fila -->
+            <div class="book-carrito">
+
+                <div class="img-nameBook">
+                    <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="OBSESION PERVERSA">
+                    <h2>LO POCO QUE SABEMOS</h2>
+                </div>
+
+                <div class="qty">
+                    <span>Cantidad: 1</span>
+                </div>
+
+                <div class="precios-carritos">
+                    <span>$1.399</span>
+                </div>
+                <button type="button" class="btn-close" aria-label="Close"></button>
+            </div>
+            <!-- fila -->
+            <div class="book-carrito">
+
+                <div class="img-nameBook">
+                    <img src="../assets/media/libros/ficcion/obsesion-perversa.png" id="obse" alt="lo poco que sabemos">
+                    <h2>OBSESION PERVERSA</h2>
+                </div>
+
+                <div class="qty">
+                    <span>Cantidad: 1</span>
+                </div>
+
+                <div class="precios-carritos">
+                    <span>$1.890</span>
+                </div>
+                <button type="button" class="btn-close" aria-label="Close"></button>
+            </div>
+        </div>
+
+        <!-- comprar boton -->
+        <div class="container buy-shop">
+            <button type="submit" name="comprar" id="comprar" class="boton-shop">$3.289,00 | checkout</button>
+            <a href="./carrito.html"><i class="fas fa-shopping-cart"></i> view cart</a>
+        </div>
+    </main>
 </body>
 </html>
