--- a/views/romantico.html
+++ b/views/romantico.html
@@ -52,7 +52,7 @@
                                     </form>
                                 </div>
                             </nav>
-                            <a href="#"><i class="carrito fab fa-shopify"></i></a>
+                            <a href="./carrito.html"><i class="carrito fab fa-shopify"></i></a>
                         </div>
                     </nav>
                 </div>
