--- a/views/carrito.html
+++ b/views/carrito.html
@@ -77,7 +77,7 @@
         <!-- comprar boton -->
         <div class="container buy-shop">
             <button type="submit" name="comprar" id="comprar" class="boton-shop">$3.289,00 | checkout</button>
-            <a href="./carrito.html"><i class="fas fa-shopping-cart"></i> view cart</a>
+            <a href="./carrito.html">view cart</a>
         </div>
     </main>
 </body>
