--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
 .content-bread .bread-libros .bread-lista {
   list-style: none; }
   .content-bread .bread-libros .bread-lista .bread-lista__item {
@@ -269,6 +272,93 @@
     border-bottom: 2px black solid; }
   .buy-shop a::before {
     content: "<i class=" fas fa-shopping-cart "></i>"; }
+
+.body-contact {
+  width: 100%;
+  height: 100vh; }
+  .body-contact .contact-container::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/assets/media/fotocontact.jpg") no-repeat center;
+    background-size: cover;
+    z-index: -1;
+    filter: blur(50px); }
+  .body-contact .contact-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 20px 100px; }
+    .body-contact .contact-container .contact-box {
+      max-width: 850px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background-color: #fff;
+      box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19); }
+      .body-contact .contact-container .contact-box .left {
+        height: 100%;
+        background: url("/assets/media/fotocontact.jpg") no-repeat center;
+        background-size: cover; }
+      .body-contact .contact-container .contact-box .right {
+        padding: 25px 40px; }
+        .body-contact .contact-container .contact-box .right h2 {
+          padding-bottom: 10px;
+          margin-bottom: 10px;
+          position: relative; }
+        .body-contact .contact-container .contact-box .right h2::after {
+          content: '';
+          position: absolute;
+          left: 50%;
+          bottom: 0;
+          transform: translateX(-50%);
+          height: 4px;
+          width: 50px;
+          border-radius: 2px;
+          background-color: #2ecc; }
+        .body-contact .contact-container .contact-box .right .field {
+          outline: none;
+          border: none;
+          border: 2px solid rgba(0, 0, 0, 0);
+          width: 100%;
+          padding: 0.5rem 1rem;
+          background-color: rgba(230, 230, 230, 0.6);
+          font-size: 1.1rem;
+          margin-bottom: 22px;
+          transition: .3s; }
+        .body-contact .contact-container .contact-box .right .field:hover {
+          background-color: rgba(0, 0, 0, 0.1); }
+        .body-contact .contact-container .contact-box .right .field:focus {
+          background-color: #fff;
+          border: 2px solid rgba(30, 85, 250, 0.47); }
+        .body-contact .contact-container .contact-box .right .area {
+          min-height: 150px; }
+        .body-contact .contact-container .contact-box .right .btn {
+          width: 100%;
+          padding: 0.5rem 1rem;
+          font-size: 1.1rem;
+          background-color: cadetblue;
+          cursor: pointer;
+          outline: none;
+          border: none;
+          color: #fff;
+          transition: .3s; }
+        .body-contact .contact-container .contact-box .right .btn:hover {
+          background-color: #000; }
+
+@media screen and (max-width: 880px) {
+  .contact-box {
+    grid-template-columns: 1fr; }
+  .left {
+    height: 200px; } }
 
 * {
   margin: 0;
