--- a/views/hidra.html
+++ b/views/hidra.html
@@ -40,7 +40,7 @@
                                     <a class="nav-link active" href="./editorial.html">Editorial</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
+                                    <a class="nav-link" href="./contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
