--- a/views/productos.html
+++ b/views/productos.html
@@ -34,7 +34,7 @@
                                     <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link active" href="./views/productos.html">Libros</a>
+                                    <a class="libros nav-link active" href="./productos.html">Libros</a>
 
                                 </li>
                                 <li class="nav-item">
