--- a/views/contact.html
+++ b/views/contact.html
@@ -18,15 +18,16 @@
 <body class="body-contact">
 
     <div class="container-fluid contact-container">
+        <a href="../index.html"><i class="fas fa-arrow-left"></i> atrás</a>
         <div class="contact-box">
             <div class="left"></div>
             <div class="right">
-                <h2>Contact Us</h2>
-                <input type="text" class="field" placeholder="Your Name">
-                <input type="email" class="field" placeholder="Your E-mail">
-                <input type="text" class="field" placeholder="Your Phone">
-                <textarea class="field area" placeholder="Message"></textarea>
-                <button class="btn">Send</button>
+                <h2>Contactanos</h2>
+                <input type="text" class="field" placeholder="Nombre y Apellido">
+                <input type="email" class="field" placeholder="E-mail">
+                <input type="text" class="field" placeholder="Número de Telefono">
+                <textarea class="field area" placeholder="Mensaje"></textarea>
+                <button class="btn">Enviar</button>
             </div>
         </div>
     </div>
