--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -41,16 +41,16 @@
                                     <a class="nav-link" href="./editorial.html">Editorial</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./contact.html">Contact</a>
+                                    <a class="nav-link" href="./contact.html">Contactanos</a>
                                 </li>
                             </ul>
                         </div>
                         <nav class="navbar navbar-light ">
                             <div class="container-fluid">
                                 <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Search"
+                                    <input class="form-control me-2" type="search" placeholder="Buscar"
                                         aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">Search</button>
+                                    <button class="btn btn-outline-success" type="submit">Buscar</button>
                                 </form>
                             </div>
                         </nav>
@@ -64,7 +64,7 @@
             <nav class="bread-libros">
                 <ul class="bread-lista">
                     <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
-                                class="fas fa-long-arrow-alt-left"></i> Home </a>
+                                class="fas fa-long-arrow-alt-left"></i> Inicio </a>
                     </li>
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/productos.html"> Libros </a>
@@ -204,19 +204,19 @@
             <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
                 <h3>Navegacion</h3>
                 <li>
-                    <a href="./index.html">Home</a>
+                    <a href="./index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="#">Editorial</a>
+                    <a href="./editorial.html">Editorial</a>
                 </li>
                 <li>
-                    <a href="#">Libros</a>
+                    <a href="./productos.html">Libros</a>
                 </li>
                 <li>
                     <a href="#">Informacion</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="./contact.html">Contactanos</a>
                 </li>
             </ul>
             <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
