--- a/views/terror.html
+++ b/views/terror.html
@@ -35,19 +35,19 @@
 
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Editorial</a>
+                                    <a class="nav-link" href="./editorial.html">Editorial</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
+                                    <a class="nav-link" href="./contact.html">Contactanos</a>
                                 </li>
                             </ul>
                         </div>
                         <nav class="navbar navbar-light ">
                             <div class="container-fluid">
                                 <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Search"
+                                    <input class="form-control me-2" type="search" placeholder="Buscar"
                                         aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">Search</button>
+                                    <button class="btn btn-outline-success" type="submit">Buscar</button>
                                 </form>
                             </div>
                         </nav>
@@ -61,7 +61,7 @@
             <nav class="bread-libros">
                 <ul class="bread-lista">
                     <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
-                                class="fas fa-long-arrow-alt-left"></i> Home </a>
+                                class="fas fa-long-arrow-alt-left"></i> Inicio </a>
                     </li>
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/productos.html"> Libros </a>
