--- a/views/carrito.html
+++ b/views/carrito.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -13,7 +12,7 @@
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atenas Wishlist</title>
+    <title>Atenas Carrito</title>
 </head>
 <body>
     <header>
@@ -23,7 +22,7 @@
             <nav class="bread-libros">
                 <ul class="bread-lista">
                     <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
-                                class="fas fa-long-arrow-alt-left"></i> Home</a>
+                                class="fas fa-long-arrow-alt-left"></i> Inicio</a>
                     </li>
                 </ul>
             </nav>
@@ -31,7 +30,7 @@
     </header>
     <main>
         <div class="container carrito-content">
-            <span class="line-hover active">Shopping Cart
+            <span class="line-hover active">Carrito
                 <span class="count cart-counter">2</span>
             </span>
         </div>
@@ -76,8 +75,8 @@
 
         <!-- comprar boton -->
         <div class="container buy-shop">
-            <button type="submit" name="comprar" id="comprar" class="boton-shop">$3.289,00 | checkout</button>
-            <a href="./carrito.html">view cart</a>
+            <button type="submit" name="comprar" id="comprar" class="boton-shop">$3.289,00 | confirmar</button>
+            <a href="./carrito.html">ver carro</a>
         </div>
     </main>
 </body>
