--- a/views/ventana.html
+++ b/views/ventana.html
@@ -31,7 +31,7 @@
                                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link active" href="./views/productos.html">Libros</a>
+                                    <a class="libros nav-link active" href="./productos.html">Libros</a>
 
                                 </li>
                                 <li class="nav-item">
