--- a/views/vyr.html
+++ b/views/vyr.html
@@ -33,7 +33,7 @@
                                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link " href="./views/productos.html">Libros</a>
+                                    <a class="libros nav-link " href="./productos.html">Libros</a>
 
                                 </li>
                                 <li class="nav-item">
