cambie una class

--- a/views/contact.html
+++ b/views/contact.html
@@ -27,7 +27,7 @@
                 <input type="email" class="field" placeholder="E-mail">
                 <input type="text" class="field" placeholder="Número de Telefono">
                 <textarea class="field area" placeholder="Mensaje"></textarea>
-                <button class="btn">Enviar</button>
+                <button class="btn" type="submit">Enviar</button>
             </div>
         </div>
     </div>
