--- a/views/carrito.html
+++ b/views/carrito.html
@@ -31,7 +31,7 @@
     <main>
         <div class="container carrito-content">
             <span class="line-hover active">Carrito
-                <span class="count cart-counter">2</span>
+                <!-- <span class="count cart-counter">2</span> -->
             </span>
         </div>
         <!-- productos en carrito -->
@@ -79,5 +79,6 @@
             <a href="./carrito.html">ver carro</a>
         </div>
     </main>
+    <script src="/src/cart.js"></script>
 </body>
 </html>
