--- a/views/productos.html
+++ b/views/productos.html
@@ -48,7 +48,7 @@
                         <nav class="navbar navbar-light ">
                             <div class="container-fluid">
                                 <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Buscar"
+                                    <input id="search" class="form-control me-2" type="search" placeholder="Buscar"
                                         aria-label="Search">
                                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                                 </form>
@@ -84,10 +84,10 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="./fantasia.html">Fantasía</a>
-                <a href="./ficcion.html">Ficción</a>
-                <a href="./terror.html">Terror</a>
-                <a href="./romantico.html">Romantico</a>
+                <a class="filterCategory">Fantasía</a>
+                <a class="filterCategory">Ficción</a>
+                <a class="filterCategory">Terror</a>
+                <a class="filterCategory">Romantico</a>
             </div>
         </div>
     </main>
