cambio de ID en html

--- a/views/productos.html
+++ b/views/productos.html
@@ -106,7 +106,7 @@
                         <div class="row cartContainer mx-0">                        </div> 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="vaciar" class="btn btn-danger">Restore Cart</button>
+                        <button type="button" id="restoreCart" class="btn btn-danger">Restore Cart</button>
                     </div>
                 </div>
             </div>
