realizando cambios en el script.js, creando funcionalidad navbar, etc..

--- a/views/productos.html
+++ b/views/productos.html
@@ -50,7 +50,7 @@
                                 <form class="d-flex search-navbar">
                                     <input id="search" class="form-control me-2" type="search" placeholder="Buscar"
                                         aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                                    <button class="btn btn-outline-success search-btn">Buscar</button>
                                 </form>
                                 <button type="button" class="btn bg-white btn-primary p-0 mx-3 border-0 border-radius" data-bs-target="#modalCart" data-bs-toggle="modal"><i class="carrito fab fa-shopify"></i></button>
                             </div>
@@ -85,9 +85,9 @@
         <div class="container navbar-filtros">
             <div class="generos__filtros">
                 <a class="filterCategory" id="fantasy" >Fantasy</a>
-                <a class="filterCategory"id="fiction" >Fiction</a>
-                <a class="filterCategory" id="terror">Terror</a>
-                <a class="filterCategory" id="romance">Romance</a>
+                <a class="filterCategory" id="fiction" >Fiction</a>
+                <a class="filterCategory" id="terror" >Terror</a>
+                <a class="filterCategory" id="romance" >Romance</a>
             </div>
         </div>
     </main>
