hice navbar y filtro de busqueda por categoria

--- a/views/productos.html
+++ b/views/productos.html
@@ -49,7 +49,7 @@
                             <div class="container-fluid">
                                 <form class="d-flex search-navbar">
                                     <input id="search" class="form-control me-2" type="search" placeholder="Buscar"
-                                        aria-label="Search">
+                                        aria-label="Search" autocomplete="off">
                                     <button class="btn btn-outline-success search-btn">Buscar</button>
                                 </form>
                                 <button type="button" class="btn bg-white btn-primary p-0 mx-3 border-0 border-radius" data-bs-target="#modalCart" data-bs-toggle="modal"><i class="carrito fab fa-shopify"></i></button>
